fix bugs with custom scrollbar

--- a/src/components/custom-scrollbar/CustomScrollbar.module.scss
+++ b/src/components/custom-scrollbar/CustomScrollbar.module.scss
@@ -1,6 +1,5 @@
 .scrollbarContainer {
   position: absolute;
-  z-index: 111111;
 
   width: 5px;
   border-radius: 999px;
